# midiphoria

./: README.md  pyproject.toml  requirements.txt
src/midiphoria/: __init__.py  app.py  colors.py  controller.py  envelope.py  export.py  live.py  midi.py  midifile.py  recording.py
