[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midiphoria"
version = "0.1.0"
description = "GPU-accelerated MIDI-driven visualizer (MVP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyglet>=2.0.10",
  "mido>=1.3.2",
  "python-rtmidi>=1.5.8",
  "numpy>=1.26.0",
]

[project.scripts]
midiphoria = "midiphoria.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

